force-app/main/default/objects/Invoice_Item__c/fields/Delivery_Order__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Order</label>
    <referenceTo>Delivery_Order__c</referenceTo>
    <relationshipName>Invoice_Item</relationshipName>
    <type>Lookup</type>
</CustomField>