force-app/main/default/objects/Invoice_Item__c/fields/ExtDelivery__c.field-meta.xml
<CustomField>
    <fullName>ExtDelivery__c</fullName>
    <formula>Delivery_Order__r.ExtDelivery__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>预计交货日</label>
    <type>Text</type>
</CustomField>