force-app/main/default/objects/Invoice_Item__c/fields/Hisense_Entity__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Entity__c</fullName>
    <formula>Invoice__r.Hisense_Entity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hisense Entity</label>
    <type>Text</type>
</CustomField>