force-app/main/default/objects/Invoice_Item__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipName>Invoice_Item</relationshipName>
    <type>Lookup</type>
</CustomField>