force-app/main/default/objects/Invoice_Item__c/fields/Invoice_Amount_Inc_Vat__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount_Inc_Vat__c</fullName>
    <label>Invoice Amount(Inc VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>