force-app/main/default/objects/Invoice_Item__c/fields/Invoice_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Quantity__c</fullName>
    <label>Invoice Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>