force-app/main/default/objects/Invoice_Item__c/fields/No_All__c.field-meta.xml
<CustomField>
    <fullName>No_All__c</fullName>
    <description>订单号 + ‘-’  + 订单行号 + ‘-’  + 交货单号 + ‘-’  + 交货单行号 + ‘-’  + 发票号 + ‘-’  + 发票行号</description>
    <label>No All</label>
    <length>255</length>
    <type>Text</type>
</CustomField>