force-app/main/default/objects/Invoice_Item__c/fields/Post_Month__c.field-meta.xml
<CustomField>
    <fullName>Post_Month__c</fullName>
    <formula>MONTH(Invoice__r.Invoice_Posting_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>