force-app/main/default/objects/Invoice_Item__c/fields/Product_Export_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Export_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Export Model</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipName>Invoice_Item1</relationshipName>
    <type>Lookup</type>
</CustomField>