force-app/main/default/objects/Invoice_Item__c/fields/Product_Factory_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Factory_Model__c</fullName>
    <label>Product Factory Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>