force-app/main/default/objects/Invoice_Item__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipName>Invoice_Item</relationshipName>
    <type>Lookup</type>
</CustomField>