force-app/main/default/objects/Invoice_Item__c/fields/Sales_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Item__c</fullName>
    <label>Sales Order Item</label>
    <referenceTo>Order_Product__c</referenceTo>
    <relationshipName>Invoice_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>