force-app/main/default/objects/Invoice_Item__c/fields/SAP_Inovice_No__c.field-meta.xml
<CustomField>
    <fullName>SAP_Inovice_No__c</fullName>
    <formula>Invoice__r.SAP_Invoice_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inovice No</label>
    <type>Text</type>
</CustomField>