force-app/main/default/objects/Invoice_Item__c/fields/SAP_Invoice_Line_No__c.field-meta.xml
<CustomField>
    <fullName>SAP_Invoice_Line_No__c</fullName>
    <label>Invoice Line No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>