force-app/main/default/objects/Invoice_Item__c/fields/SAP_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>SAP_Product_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Line</label>
    <referenceTo>Mapping__c</referenceTo>
    <relationshipName>Invoice_Item</relationshipName>
    <type>Lookup</type>
</CustomField>