force-app/main/default/objects/Invoice_Item__c/fields/TV_Size__c.field-meta.xml
<CustomField>
    <fullName>TV_Size__c</fullName>
    <description>TV Size</description>
    <formula>TEXT(Product_Export_Model__r.Size__c)</formula>
    <label>TV_Size</label>
    <type>Text</type>
</CustomField>