force-app/main/default/objects/Invoice_Item__c/fields/TV_Type1__c.field-meta.xml
<CustomField>
    <fullName>TV_Type1__c</fullName>
    <description>TV Type1</description>
    <formula>Product_Export_Model__r.TV_Type1__c</formula>
    <label>TV_Type1</label>
    <type>Text</type>
</CustomField>