force-app/main/default/objects/Invoice_Item__c/fields/TV_Type2__c.field-meta.xml
<CustomField>
    <fullName>TV_Type2__c</fullName>
    <description>TV Type2</description>
    <formula>Product_Export_Model__r.TV_Type2__c</formula>
    <label>TV_Type2</label>
    <type>Text</type>
</CustomField>