force-app/main/default/objects/Invoice_Item__c/fields/TV_Type3__c.field-meta.xml
<CustomField>
    <fullName>TV_Type3__c</fullName>
    <description>TV Type3</description>
    <formula>Product_Export_Model__r.TV_Type3__c</formula>
    <label>TV_Type3</label>
    <type>Text</type>
</CustomField>